--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "lodash": "^4.17.4",
     "request": "^2.81.0",
     "request-promise": "^4.2.0",
-    "webpack": "^4.25.1"
+    "webpack": "^4.25.1",
+    "babel-polyfill": "^6.26.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
